# homelab

./: .gitignore  CLAUDE.md  LICENSE  ansible-navigator.yml  ansible.cfg  bindep.txt  devfile.yaml  execution-environment.yml  pyproject.toml  requirements.txt
.claude/commands/: update-image-tags.md
.github/: copilot-instructions.md
collections/: requirements.yml
collections/ansible_collections/jaredhocutt/homelab/: galaxy.yml
collections/ansible_collections/jaredhocutt/homelab/extensions/molecule/: Dockerfile.j2  config.yml  prepare.yml
collections/ansible_collections/jaredhocutt/homelab/extensions/molecule/archiveium/: converge.yml  molecule.yml  verify.yml
collections/ansible_collections/jaredhocutt/homelab/extensions/molecule/audiobookshelf/: converge.yml  verify.yml
collections/ansible_collections/jaredhocutt/homelab/extensions/molecule/authentik/: converge.yml  verify.yml
collections/ansible_collections/jaredhocutt/homelab/extensions/molecule/bar_assistant/: converge.yml  verify.yml
collections/ansible_collections/jaredhocutt/homelab/extensions/molecule/bentopdf/: converge.yml  verify.yml
collections/ansible_collections/jaredhocutt/homelab/extensions/molecule/calibre/: converge.yml  verify.yml
collections/ansible_collections/jaredhocutt/homelab/extensions/molecule/calibre_web_automated/: converge.yml  verify.yml
collections/ansible_collections/jaredhocutt/homelab/extensions/molecule/changedetection/: converge.yml  verify.yml
collections/ansible_collections/jaredhocutt/homelab/extensions/molecule/default/: molecule.yml
collections/ansible_collections/jaredhocutt/homelab/extensions/molecule/do_agent/: converge.yml  verify.yml
collections/ansible_collections/jaredhocutt/homelab/extensions/molecule/go2rtc/: converge.yml  verify.yml
collections/ansible_collections/jaredhocutt/homelab/extensions/molecule/healthchecks/: converge.yml  verify.yml
collections/ansible_collections/jaredhocutt/homelab/extensions/molecule/homarr/: converge.yml  verify.yml
collections/ansible_collections/jaredhocutt/homelab/extensions/molecule/homebox/: converge.yml  verify.yml
collections/ansible_collections/jaredhocutt/homelab/hack/: duplicate_role.sh
collections/ansible_collections/jaredhocutt/homelab/plugins/lookup/: bws.py  container_config.py  traefik_labels.py
hack/: check_image_tags.py  duplicate_role.sh
inventory/: hosts.yml
inventory/group_vars/: linux.yml
inventory/group_vars/all/: all.yml  vault.yml
inventory/group_vars/network/: vault.yml
inventory/host_vars/: apps.yml  edge.yml  localhost.yml  media.yml  router.yml  work.yml
playbooks/: apps.yml  edge.yml  kickstart.yml  media.yml  router.yml  sandbox.yml
scripts/: check_image_tags.py  oemdrv.sh  open_role_files.sh
vault/: vault-open.sh  vault-pass.gpg
(+365 files in other folders)
