[project]
name = "homelab"
version = "0.1.0"
description = "A project for managing my home lab."
authors = [
    {name = "Jared Hocutt",email = "jaredhocutt@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ansible-core (>=2.19,<2.20)",
    "ansible-builder (>=3.1,<3.2)",
    "ansible-creator (>=25.9)",
    "ansible-navigator (>=25.9)",
    "ansible-lint (>=25.9)",
    "jmespath (>=1.0,<1.1)",
    "bitwarden-sdk (>=1.0,<1.1)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
