[project]
name = "homelab"
version = "0.1.0"
description = "A project for managing my home lab."
authors = [
    {name = "Jared Hocutt",email = "jaredhocutt@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ansible-core~=2.19.0",
    "bitwarden-sdk~=1.0.0",
    "jmespath~=1.0.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ansible-builder = "~=3.1.0"
ansible-creator = "~=25.11.0"
ansible-lint = "~=25.11.0"
ansible-navigator = "~=25.11.0"
flake8 = "~=7.3"
molecule = "~=25.11.0"
molecule-plugins = {version = "~=25.8", extras = ["podman"]}
pylint = "~=4.0"
taskipy = "~=1.14"

[tool.poetry.requires-plugins]
poetry-plugin-export = "~=1.9"

[tool.taskipy.tasks]
build-ee = "ansible-navigator builder build --tag localhost/homelab-ee:latest --verbosity 3 --context .ansible/context --prune-images"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
